<resources>
  <string name="app_name">StoryBytes</string>
  <!-- Title View -->
  <string name="title_txt_settings">Settings</string>
  <string name="title_txt_info">Info</string>
  <string name="title_txt_start">Start playing a story.</string>
  <!-- Game Info -->
  <string name="info_txt_support_title">Support</string>
  <string name="info_txt_support_main">StoryBytes is a free and open-source Ink script reader. It is provided as-is under the MIT License. If you encounter any issues with the app, you\'re welcome to connect on the Github (https://github.com/micabytes/storybytes-android) or contact us on the MicaBytes discord server.</string>
  <string name="info_txt_usage_title">Usage</string>
  <string name="info_txt_usage_main">\"StoryBytes\" reads Ink Json files, generated by the inklecate run-time. If you have compiled Ink JSON files, you can simply place them in the StoryBytes directory on your internal storage. The app comes with two short json files pre-compiled.\n\nTo write your own stories, see the Ink documentation (https://github.com/inkle/ink) for a detailed overview. To make the simplest possible Ink script:\n- Download the latest version inklecate from the Ink site.\n- Create a text file MyStory.ink, containing the text "Hello, World!"\n- On the command line, run "inklecate.exe MyStory.ink" (on Windows)\nCopy MyStory.ink.json to the StoryBytes directory on your phone.\n- Run the StoryBytes app and "play" your script.\n\nNote that there is an excellent GUI editor for Ink (also developed by inkle), called Inky (https://github.com/inkle/inky). We recommend it highly, if you feel like creating bigger works.</string>
  <string name="info_txt_credits_title">Credits</string>
  <string name="info_txt_credits_main">\"StoryBytes\" is designed and developed by Michael Akinde of MicaBytes.</string>
  <string name="info_txt_credits_ink">\"StoryBytes\" runs on Ink! Ink is a scripting language for writing interactive narrative, developed by inkle studios (https://inklestudios.com/ink).\n\nThe ink implementation used in \"StoryBytes\" is blade-ink (https://github.com/bladecoder/blade-ink) by Rafael Garcia (bladecoder).\n\n</string>
  <string name="support_email">support@micabytes.com</string>
  <string name="support_email_type">text/plain</string>
  <string name="support_subject">StoryBytes Support</string>
  <string name="support_report">Select E-mail clients</string>
  <string name="info_uri_facebook">http://www.facebook.com/MicaBytes</string>
  <string name="info_uri_twitter">http://www.twitter.com/MicaBytes</string>
  <string name="info_uri_github">https://github.com/MicaBytes/storybytes-android</string>
  <string name="info_txt_github">Link to MicaBytes github repository</string>
  <string name="info_uri_discord">https://discordapp.com/invite/92qW4XC</string>
  <string name="info_txt_discord">Link to MicaBytes discord server</string>
  <!-- Load View -->
  <string name="load_txt_select">Select a json file</string>
  <string name="load_txt_find_json">Copy your own ink.json files into the StoryBytes directory to run them using the text player.</string>
  <string name="load_txt_pressplay">Press the play button to start the ink file.</string>
  <string name="load_txt_failed">Can not load the file %1$s; not a valid json Ink file.</string>
  <string name="load_txt_nofile">No file selected.</string>
  <!-- Story View -->
  <string name="story_image">Story Image</string>

</resources>
