<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".ui.InfoFragment">

  <data>

    <variable
        name="view"
        type="com.micabytes.storybytes.ui.InfoFragment"/>

  </data>

  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent" android:id="@+id/relativeLayout">

    <ImageView
        android:id="@+id/InfoViewTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@null"
        android:src="@drawable/px_micabytes_logo"
        app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"/>


    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/info_txt_support_title"
        android:textSize="16sp"
        tools:ignore="RtlHardcoded"
        android:id="@+id/textView" android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/InfoViewTop"
        app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" android:layout_marginRight="8dp"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/info_txt_support_main"
        tools:ignore="RtlHardcoded"
        android:id="@+id/textView2" android:layout_marginTop="9dp"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" android:layout_marginRight="8dp"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/info_txt_credits_title"
        android:textSize="16sp"
        tools:ignore="RtlHardcoded"
        android:id="@+id/textView3" android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" android:layout_marginRight="8dp"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/info_txt_credits_main"
        tools:ignore="RtlHardcoded"
        android:id="@+id/textView4" android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" android:layout_marginRight="8dp"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/info_txt_credits_ink"
        tools:ignore="RtlHardcoded"
        android:id="@+id/textView5" android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" android:layout_marginRight="8dp"/>


  </androidx.constraintlayout.widget.ConstraintLayout>

</layout>